# Kugle-Misc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake_common/acado/: acado.cmake  install.sh
cmake_common/eigen/: eigen.cmake  install.sh
cmake_common/opencv/: install.sh  opencv.cmake
cmake_common/yaml/: install.sh
include/: CMakeLists.txt
libs/: misc.cpp
libs/lspc/: LSPC.h  MessageTypes.h  Socket.cpp
libs/mpc/: CMakeLists.txt  MPC.cpp  MPC.h  Path.cpp  Path.h  Trajectory.cpp  Trajectory.h
libs/mpc/codegen/: acado_indices.h  acado_qpoases3_interface.h  kugle_mpc_export.m
src/LSPC_Test/: main.cpp
src/MPC_Test/: CMakeLists.txt  main.cpp
src/NumericTest/: main.cpp
src/QuaternionTest/: main.cpp
src/mpc_code_generation/: CMakeLists.txt  kugle_mpc_acado_generate_path_following_withExport.m  kugle_mpc_export.cpp
